<package format="3">
  <name>rmf_site_editor</name>
  <version>0.0.1</version>
  <description>An editor and visualizer of building environments</description>
  <maintainer email="mxgrey@intrinsic.ai">Grey</maintainer>
  <license>Apache License 2.0</license>

  <depend>rmf_site_format</depend>
  <depend>gtk3</depend>
  <depend>libudev-dev</depend>
  <depend>libasound2-dev</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
