[package]
name = "rmf_site_egui"
version = "0.0.2"
edition = "2024"
authors = ["Grey <mxgrey@intrinsic.ai>"]
description = "Barebones bevy_egui widgets for the rmf_site_editor"
license = "Apache-2.0"
repository = "https://github.com/open-rmf/rmf_site"
readme = "README.md"

[dependencies]
bevy_ecs = {workspace = true}
bevy_egui = {workspace = true}
bevy_app = {workspace = true}
smallvec = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
bevy = {workspace = true, features = ["dynamic_linking"]}
bevy-inspector-egui = {workspace = true}
