<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_site_map_server</name>
  <version>0.0.1</version>
  <description>Building map server</description>
  <maintainer email="lucadv@intrinsic.ai">Luca Della Vedova</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclrs</depend>
  <depend>rosidl_runtime_rs</depend>
  <depend>service_msgs</depend>
  <depend>rmf_building_map_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
