[package]
name = "rmf_site_picking"
version = "0.0.1"
edition = "2024"
authors = ["Grey <mxgrey@intrinsic.ai>"]
description = "Picking utilities and workflows for rmf_site_editor"
license = "Apache-2.0"
repository = "https://github.com/open-rmf/rmf_site"
readme = "README.md"

[dependencies]
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}
bevy_reflect = {workspace = true}
bevy_picking = {workspace = true}
bevy_render = {workspace = true}
bevy_derive = {workspace = true}
tracing = {workspace = true}
bevy_input = {workspace = true}
bevy_asset = {workspace = true}
bevy_pbr = {workspace = true}
bevy_math = {workspace = true}
bevy_transform = {workspace = true}
crossflow = {workspace = true}
bytemuck = {workspace = true}
anyhow = {workspace = true}
bitfield = {workspace = true}
smallvec = {workspace = true}
rmf_site_camera = {workspace = true}
bevy_egui = {workspace = true}
web-time = {workspace = true}

[dev-dependencies]
bevy = {workspace = true, features = ["dynamic_linking"]}
bevy-inspector-egui = {workspace = true}
